# test-mail-server

./: .coverage  .dockerignore  Makefile  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh
app/: __init__.py  config.py  main.py  models.py
app/routers/: __init__.py  auth.py  emails.py  health.py
app/services/: __init__.py  cleanup.py  email_storage.py  smtp_server.py
docker/: Dockerfile  Dockerfile.prod
docs/: TESTING.md
scripts/: test_email_sender.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_email_storage.py  test_simple.py
